# gim

./: CONTRIBUTING.md  Cargo.toml  README.md
config/: default.json  gim_config.yaml
docs/: api.md  architecture.md  extending.md  index.md  modules.md
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/core/: mod.rs
src/engine/: mod.rs
src/modules/: cpu.rs  disk.rs  memory.rs  network.rs  process.rs  system.rs
src/output/: mod.rs
src/tui/: mod.rs
