[package]
name = "gim"
version = "0.1.0"
edition = "2021"
description = "A fast, modular system metrics CLI and TUI tool"
authors = ["Dev-Dami"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.37.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2"
directories = "6"
ratatui = "0.29"
crossterm = "0.28"
